// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelRepositoryLocationList matches snapshot with all items 1`] = `
<div
  className="location-list"
>
  <List
    lockVertically={false}
    onChange={[Function]}
    removableByMove={false}
    renderItem={[Function]}
    renderList={[Function]}
    transitionDuration={300}
    values={
      [
        {
          "repositoryLocationType": "PUBLIC",
          "value": "",
        },
        {
          "repositoryLocationType": "CONFIGURABLE",
          "value": "test.com",
        },
        {
          "repositoryLocationType": "LOCAL",
          "value": "d:/myModels",
        },
        {
          "repositoryLocationType": "DMR",
          "value": "c:/dtmi",
        },
      ]
    }
    voiceover={
      {
        "canceled": [Function],
        "dropped": [Function],
        "item": [Function],
        "lifted": [Function],
        "moved": [Function],
      }
    }
  />
</div>
`;

exports[`ModelRepositoryLocationList matches snapshot with no items 1`] = `
<div
  className="location-list"
>
  <List
    lockVertically={false}
    onChange={[Function]}
    removableByMove={false}
    renderItem={[Function]}
    renderList={[Function]}
    transitionDuration={300}
    values={[]}
    voiceover={
      {
        "canceled": [Function],
        "dropped": [Function],
        "item": [Function],
        "lifted": [Function],
        "moved": [Function],
      }
    }
  />
</div>
`;
